[package]
authors = ["Daniel Egger <daniel@eggers-club.de>"]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
description = "A platform agnostic driver to interface with the I2C based TI INA260 power monitor"
documentation = "https://docs.rs/ina260"
keywords = [
    "embedded-hal-driver",
    "powermonitor",
]
license = "0BSD"
name = "ina260"
readme = "README.md"
repository = "https://github.com/korbin/ina260"
version = "0.4.0"
edition = "2021"


[features]
default = ["async"]
blocking = []
async = ["embedded-hal-async"]
defmt = ["dep:defmt"]

[dependencies]
cast = { version = "0.2.2", default-features = false }
defmt = { version = "0.3.0", optional = true }
embedded-hal = { version = "1.0.0" }
embedded-hal-async = { version = "1.0.0", optional = true }
maybe-async-cfg = "0.2.3"
